[project]
name = "SeattleRealTimeFire911Calls"
version = "1.0.0"
description = "<UPDATE ME>"
authors = [
  {name = "John Thomas", email = "johnetho@uw.edu"},
  {name = "Your Name", email = "you@example.com"},
  {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "contextily (>=1.7.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
